--- a/templates/add.html
+++ b/templates/add.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Item</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Add</title>
 </head>
 <body>
-    <h1>Add Page</h1>
+    <h1 style="text-align: center; font-style: italic;">Add Task</h1>
+    <br/>
     <form action="/add" method="post">
-        <input type="text" name="title" id="title" placeholder="Title...">
-        <input type="text" name="description" id="description" placeholder="Description...">
-        <button type="submit">Submit</button>
+        <div class="mb-3">
+            <input type="text" class="form-control" name="title" id="title" placeholder="Title...">
+        </div>
+        <div class="mb-3">
+            <input type="text" class="form-control" name="description" id="description" placeholder="Description...">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-secondary">Submit</button>
+        </div>
     </form>
 </body>
 </html>
